<resources>
    <string name="app_name">Mark_1</string>
    <string name="passenger">Passenger</string>
    <string name="kathleen_huang">Kathleen Huang</string>
    <string name="passenger">Passenger</string>
    <string name="jfk">JFK</string>
    <string name="sea">SEA</string>
    <string name="new_york_city">NEW YORK CITY</string>
    <string name="seattle">SEATTLE</string>
    <string name="depart">DEPART</string>
    <string name="arrive">ARRIVE</string>
    <string name="am8_00">8:00AM</string>
    <string name="am11_17">11:17AM</string>
    <string name="boarding_begins">BOARDING BEGINS</string>
    <string name="am7_30">7:30AM</string>
    <string name="gate">GATE</string>
    <string name="d4">D4</string>
    <string name="seat">SEAT</string>
    <string name="c3">3C</string>
    <string name="flight">FLIGHT</string>
    <string name="d2218">D2218</string>
</resources>